#401 ios logo-nav overlap issue

--- a/resources/assets/scss/_header.scss
+++ b/resources/assets/scss/_header.scss
@@ -27,9 +27,9 @@
         }
         img {
             width: 144px;
-            position: absolute;
-            left: 40px;
-            top: 26px;
+            // position: absolute;
+            // left: 40px;
+            // top: 26px;
         }
     }
 }
